--- a/Article/Article.less
+++ b/Article/Article.less
@@ -27,6 +27,9 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    font-size: 12px;
+    color: grey;
+    cursor: pointer;
   }
 
   .expandButton {
@@ -45,6 +48,8 @@
   height: 400px;
 }
 
-
+.article-closed {
+  display: none;
+}
 
 
