--- a/CSS/index.css
+++ b/CSS/index.css
@@ -62,6 +62,9 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  font-size: 12px;
+  color: grey;
+  cursor: pointer;
 }
 .article .expandButton {
   position: absolute;
@@ -75,6 +78,9 @@
 }
 .article-open {
   height: 400px;
+}
+.article-closed {
+  display: none;
 }
 .menu-button {
   position: absolute;
